[package]
name = "rust-integration"
version = "0.1.0"
authors = ["granbestiapop <leonardo.clavijo@mercadolibre.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.26.0"
wasmtime-wasi = "0.26.0"
cap-std = "0.13.9"

[[example]]
name = "socket"
path = "src/socket.rs"
